--- a/mystyle.css
+++ b/mystyle.css
@@ -26,6 +26,8 @@ ul, p {
     
     margin-top: 1em;
     margin-bottom: 1em;
+    margin-left: 1 vh;
+    margin-right: 1 vh;
     border: 2px solid #000000; 
     margin: 1em 1vh;
 }
@@ -41,4 +43,16 @@ ul, p {
 }
 #findProg + li{
     color: red;
+}
+#meetingRec {
+    border-style: solid;
+    border-width: 3pt;
+    border-color: black;
+    border-radius: 10%;
+}
+form {
+    padding: 5px 2px 5px 2px;
+    border-width: 5Q;
+    border-color: black;
+    border-style: solid;
 }
