--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,5 @@
 /*CSS file*/
+
 * {
     color: hsl(73, 100%, 0%);
 }
@@ -9,8 +10,10 @@ h1 {
     color: rgb(8, 12, 23);
     text-align: center;
 }
-#title {
+#Title {
+    position:sticky;
     margin: auto;
+    top: 0;
 }
 body {
     background-color: rgb(241, 225, 106);
@@ -34,6 +37,7 @@ ul, p, summary, ol {
     margin: 1em 1vh;
 }
 .address {
+    position: static;
     width: 25ex;
     padding-bottom: 10px;
     padding-top: 10px;
@@ -55,7 +59,13 @@ ul, p, summary, ol {
     column-gap: 100px;
     row-gap: 100px;
 }
+.col-1 {
+    max-width: 1500px;
+}
 
+.col-3 {
+    max-height: 2in;
+}
 #attendees > li{
     color: rgb(72, 0, 255);
 }
@@ -82,4 +92,9 @@ form {
 }
 summary {
     text-decoration: underline overline #8a1adb;
+}
+@media (min-width:600px) {
+    p{
+        font-size: 1.25rem;
+    }
 }
